# word-counter

./: CMakeLists.txt  README.md
business/: dictionary.h  ranked_words.h
tests/: CMakeLists.txt  Russian.utf16.txt  Russian.utf8.txt  test_dictionary.cpp  test_ranked_words.cpp
user/: CMakeLists.txt  hist_thread_manager.cpp  hist_thread_manager.h  main.cpp  main.qrc  word_rank_model.cpp  word_rank_model.h
user/qml/: AppContent.qml  AppFooter.qml  AppHeader.qml  Histogram.qml  main.qml
